# orchestrator

./: .gitignore  README.md  cli_testing.py  main.py  main_v2.py  pyproject.toml  utils.py
agent_registry/: agent_card.py  create_tables.py  database.py  health_monitor.py  main.py  models.py  remote_agents.py  schemas.py
agents/: agent.py  remote_agent_connections.py  remote_agent_connections_v2.py
agents/.adk/: session.db
api/: ip_utils.py  orch_panel.py  swagger_ui.py
auth/: auth_schemas.py  deps.py  user_data.json
core/: config.py  runner_factory.py
database/: create_tables.py  engine.py  json_store.py  models.py  session.py
infrastructure/: a2a_factory.py
migrations/: env.py
migrations/versions/: 1f27938e875e_upgrade_artifacts_user_scoped.py  7508176c3c82_add_path_column_to_artifact.py
routers/: agent_registry.py  auth_router.py  dashboard_router.py  file_router.py  history_router.py  run_agent_router.py  upload_router.py
routers/evaluation/: agent_evaluation.py  overview.py  timeseries_matrix.py
schemas/: admin.py
services/: agent_execution_service.py  agent_loader.py  agent_sync_service.py  artifact_service.py  chat_history_service.py  file_service.py  invocation_context.py  workflow_service.py
session/: session_manager.py
tools/: helper_downloads.py  sample_testing.py  session_tools.py
utils/: agent_card_extractor.py  file_manager.py
websocket/: a2a_utils.py  event_normaliser.py  event_processor.py  websocket_handler.py  ws_emitter.py
